static/styles.css
body {
    /*background-image: url("task_scheduler.png");*/
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 100vh;
    
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: 'Arial', sans-serif;
   
    margin: 0;
    padding: 0;
}

header {
    background-color: #007bff;
    color: #fff;
    text-align: center;
    padding: 20px 0;
    width: 100%; 
}

h1 {
    font-weight: bold;
}

a {
    color: #007bff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.container {
    max-width: 600px;
    margin: auto;
}

h1 {
    text-align: center;
}

form {
    margin-top: 20px;
}

label {
    margin-top: 10px;
    display: block;
}

input,
textarea,
select {
    width: 100%;
    padding: 8px;
    margin-top: 5px;
    margin-bottom: 15px;
    display: inline-block;
    border: 1px solid #ccc;
    box-sizing: border-box;
}

button {
    background-color: #007bff;
    color: #fff;
}

#showFormBtn {
    margin-top: 20px;
}

